2001-04-02  Jakub Jelinek  <jakub@redhat.com>

	* lex.c (ffelex_hash_): Avoid eating one whole line after
	#line.

Mon Apr  2 22:38:09 2001  Toon Moene <toon@moene.indiv.nluug.nl>

	* com.c (duplicate_decls): Fix thinko in lazy DECL_RTL patch
	of 2001-03-04.

Tue Mar 27 17:40:08 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* Make-lang.in: Depend on $(SYSTEM_H), not system.h.

Mon Mar 26 18:13:30 2001  Mark Mitchell  <mark@codesourcery.com>

	* com.c (duplicate_decls): Don't copy DECL_FRAME_SIZE.

Mon Mar 19 15:05:39 2001  Mark Mitchell  <mark@codesourcery.com>

	* com.c (builtin_function): Use SET_DECL_ASSEMBLER_NAME.

Wed Mar 14 09:29:27 2001  Mark Mitchell  <mark@codesourcery.com>

	* com.c (ffecom_member_phase_2): Use COPY_DECL_RTL,
	DECL_RTL_SET_P, etc.
	(duplicate_decls): Likewise.
	(start_decl): Likewise.
	
Fri Mar  9 22:52:55 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* fini.c (main): Use really_call_malloc, not malloc.

Thu Mar  8 13:27:47 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* com.c: Don't rely on the POSIX macro to define autoconf stuff.

2001-03-07  Brad Lucier  <lucier@math.purdue.edu>

	* g77.texi: Document new options -funsafe-math-optimizations
	and -fno-trapping-math.  Revise documentation for -ffast-math.

2001-03-01  Zack Weinberg  <zackw@stanford.edu>

	* proj.h: Delete 'bool' type.  Don't include stddef.h here.
	* com.c: Rename variables named 'true' and/or 'false'.
	* intdoc.c: Delete 'bool' type.

2001-03-01  Zack Weinberg  <zackw@stanford.edu>

	* lang-specs.h: Add zero initializer for cpp_spec field to all
	array elements.

2001-02-24  Zack Weinberg  <zackw@stanford.edu>

	* com.c: Don't define STDC_HEADERS, autoconf handles it.

Fri Feb 23 15:28:39 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* com.c (set_block): Set NAMES and BLOCKS from BLOCK.

2001-02-19  Joseph S. Myers  <jsm28@cam.ac.uk>

	* version.c, root.texi: Update GCC version number to 3.1.  Update
	G77 version number to 0.5.27.